--- a/index.html
+++ b/index.html
@@ -93,10 +93,23 @@ Marta Sestelo (<a href="mailto:sestelo@mat.uab.cat">sestelo@mat.uab.cat</a>)<br 
 <ul>
 <li><p><strong>NPRegfast</strong> package. Author and maintainer of this R package to perform nonparametric estimation for analyzing interactions factor-by-curve. NPRegfast allows the user to obtain nonparametric estimates using local linear kernel smoothers and compare them between factor’s levels. Also a feature of the package is its ability to draw inference about critical points, such as maxima or change points linked to the derivative curves. The inference (confidence intervals and tests) is based on bootstrap. This package allows not only to obtain smooth estimates also based on classical parametric models, as allometric model, one of the most used models in biology frameworks usually used to study the relationship between two biometrical variables. Additionally, we have implemented binning type acceleration techniques</p></li>
 <li><p><strong>FWDselect</strong> package. Author and mantainer of this package (<a href="http://cran.r-project.org/web/packages/FWDselect/">http://cran.r-project.org/web/packages/FWDselect/</a>), an R package that introduces a simple method to select the best model or best subset of variables using different types of data (continuous, binary or poisson) and applying it in different contexts (parametric or nonparametric).</p></li>
-<li><p><strong>seq2R</strong> package. Author of this package (<a href="http://cran.r-project.org/web/packages/seq2R">http://cran.r-project.org/web/packages/seq2R</a>), an R package to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. This package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in <strong>seq2R</strong>.</p></li>
+<li><p><strong>seq2R</strong> package. Author of this package (<a href="http://cran.r-project.org/web/packages/seq2R">http://cran.r-project.org/web/packages/seq2R</a>), an R package to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. This package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in <tt>seq2R<tt>.</p></li>
 </ul>
 <hr />
 <p>© <a href="sestelo.github.io">Marta Sestelo</a> 2014</p>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41678546-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
+
 </div>
 </div>
 
