--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
-<p><link href="data:text/css,%0Ap%20%7B%20color%3A%20black%3B%20font%2Dfamily%3A%20%3B%20%7D%0A%0A%0A%2F%2A%20insert%20images%20%2A%2F%0A%23foto%20%7B%0A%09float%3A%20right%3B%0A%09width%3A%2025%25%3B%0A%09height%3A%20auto%3B%0A%09margin%3A%200px%200px%200px%200px%3B%0A%7D%0A%0A" rel="stylesheet" type="text/css" media="screen" /></p>
+<p><link href="data:text/css,%0Ap%20%7B%20color%3A%20black%3B%20font%2Dfamily%3A%20Adobe%20Calson%20Pro%3B%20%7D%0A%0A%0A%2F%2A%20insert%20images%20%2A%2F%0A%23foto%20%7B%0A%09float%3A%20right%3B%0A%09width%3A%2025%25%3B%0A%09height%3A%20auto%3B%0A%09margin%3A%200px%200px%200px%200px%3B%0A%7D%0A%0A" rel="stylesheet" type="text/css" media="screen" /></p>
 <div id="sestelo.github.io" class="section level1">
 <h1>sestelo.github.io</h1>
 <div align="right">
