separation in navbar

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 
 		</p><div id="navbar">
-			<a href="#about-me"><strong>About me</strong></a>       
-			<a href="#research"><strong>Research</strong></a>       
-			<a href="#teaching"><strong>Teaching</strong></a>       
+			<a href="#about-me"><strong>About me</strong></a>  &nbsp; &nbsp; &nbsp;      
+			<a href="#research"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp;       
+			<a href="#teaching"><strong>Teaching</strong></a>   &nbsp; &nbsp; &nbsp;     
 			<a href="#software"><strong>Software</strong></a>
 		</div>
 
