--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<!-- Marcado de microdatos añadido por el Asistente para el marcado de datos estructurados de Google. -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+
+	<head>
 		<title>Marta Sestelo</title>
-		<link rel="stylesheet" type="text/css" href="style.css"/>
-		<meta name="author" content="Marta Sestelo"/> 
-		<meta charset="utf-8"/>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<meta http-equiv="Content-Style-Type" content="text/css" href="style.css"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta name="author" content="Marta Sestelo"> 
+		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Style-Type" content="text/css" href="style.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 
 
@@ -16,33 +18,30 @@
 	<body>
 
 		<h1>sestelo.github.io</h1>
-		<p><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto"/>
+		<p><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto">
 
-		</p><p><a href="https://www.linkedin.com/profile/view?id=209697998&trk=nav_responsive_tab_profile_pic"><img id="linkedin" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/linkedin.png?raw=true" alt="linkedin"/></a> 
+		<p><a href="https://www.linkedin.com/profile/view?id=209697998&trk=nav_responsive_tab_profile_pic"><img id="linkedin" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/linkedin.png?raw=true" alt="linkedin"></a> 
 
-		</p><p><a href="https://twitter.com/MartaSestelo"><img id="twitter" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/twitter.png?raw=true" alt="twitter"/></a> 
+		<p><a href="https://twitter.com/MartaSestelo"><img id="twitter" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/twitter.png?raw=true" alt="twitter"></a> 
 
 
-		</p><div id="navbar">
-			<a href="#about-me"><strong>About me</strong></a>  &nbsp; &nbsp; &nbsp;      
-			<a href="#research"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp;       
-			<a href="#teaching"><strong>Teaching</strong></a>   &nbsp; &nbsp; &nbsp;     
+		<div id="navbar">
+			<a href="#about-me"><strong>About me</strong></a> &nbsp; &nbsp; &nbsp; 
+			<a href="#research"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp; 
+			<a href="#teaching"><strong>Teaching</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="#software"><strong>Software</strong></a>
 		</div>
 
 
-		<p><br/> <br/> <br/> <br/> <br/> <br/></p>
+		<p><br> <br> <br> <br> <br> <br></p>
 
 
 		<div id="contact2">
-		June 04, 1981<br/><a href="mailto:sestelo@mat.uab.cat">sestelo@mat.uab.cat</a><br/><a href="http://sestelo.github.io">sestelo.github.io</a>
+		June 04, 1981<br /><a href="mailto:sestelo@mat.uab.cat">sestelo@mat.uab.cat</a><br /><a href="http://sestelo.github.io">sestelo.github.io</a>
 		</div>
 
-		
-<span itemscope itemtype="http://schema.org/Article"><div id="contact1">
-<span itemprop="author" itemscope itemtype="http://schema.org/Person">
-		
-<span itemprop="name">Marta Sestelo</span></span><br/>Department of Mathematics<br/>Autonomous University of Barcelona<br/>
+		<div id="contact1">
+		Marta Sestelo<br />Department of Mathematics<br />Autonomous University of Barcelona<br />
 		</div>
 
 
@@ -51,10 +50,9 @@
 		<div id="texto">
 
 			<h2><a name="about-me"></a> About me</h2>
-			<p>
-<span itemprop="articleBody">I am a Postdoctoral Researcher at the Department of Mathemathics of the Autonomous University of Barcelona.</span> I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
-			<p><br/></p>
-			<hr/>
+			<p>I am a Postdoctoral Researcher at the Department of Mathemathics of the Autonomous University of Barcelona. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
+			<p><br></p>
+			<hr />
 
 
 
@@ -88,9 +86,9 @@
 				<li><p><a href="http://webs.uvigo.es/depc05/reports/10_02.pdf">M. Sestelo and J. Roca-Pardiñas (2010). Length-weight relationship of Pollicipes pollicipes (Gmelin, 1789) on the Atlantic coast of Galicia (NW Spain). Some aspects of its biology and management. Discussion Papers in Statistics and Operations Research, no 10/02.</a></p></li>
 			</ul>
 
-			<p><br/></p>
+			<p><br></p>
 
-			<hr/>
+			<hr />
 
 
 
@@ -99,9 +97,9 @@
 				<li><p>Probability Calculus. B.Sc. in Applied Statistics. Autonomous University of Barcelona.</p></li>
 				<li><p>Simulation, Resampling and Applications. B.Sc. in Applied Statistics. Autonomous University of Barcelona.</p></li>
 			</ul>
-			<p><br/></p>
+			<p><br></p>
 
-			<hr/>
+			<hr />
 
 
 
@@ -109,18 +107,18 @@
 			<ul>
 				<li><strong>NPRegfast</strong> package. Author and maintainer of this R package to perform nonparametric estimation for analyzing interactions factor-by-curve. NPRegfast allows the user to obtain nonparametric estimates using local linear kernel smoothers and compare them between factor’s levels. Also a feature of the package is its ability to draw inference about critical points, such as maxima or change points linked to the derivative curves. The inference (confidence intervals and tests) is based on bootstrap. This package allows not only to obtain smooth estimates also based on classical parametric models, as allometric model, one of the most used models in biology frameworks usually used to study the relationship between two biometrical variables. Additionally, we have implemented binning type acceleration techniques</li>
 
-				<p><br/></p>
+				<p><br></p>
 
 				<li><strong>FWDselect</strong> package. Author and mantainer of this package (<a href="http://cran.r-project.org/web/packages/FWDselect/">http://cran.r-project.org/web/packages/FWDselect/</a>), an R package that introduces a simple method to select the best model or best subset of variables using different types of data (continuous, binary or poisson) and applying it in different contexts (parametric or nonparametric).</li>
 
-				<p><br/></p>
+				<p><br></p>
 				
-				<li><strong>seq2R</strong> package. Author of this R package (<a href="http://cran.r-project.org/web/packages/seq2R">http://cran.r-project.org/web/packages/seq2R</a>) to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. The package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in <tt>seq2R<tt>.</tt></tt></li><tt><tt>
-			</tt></tt></ul><tt><tt>
-			<p><br/></p>
-			<hr/>
+				<li><strong>seq2R</strong> package. Author of this R package (<a href="http://cran.r-project.org/web/packages/seq2R">http://cran.r-project.org/web/packages/seq2R</a>) to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. The package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in <tt>seq2R<tt>.</li>
+			</ul>
+			<p><br></p>
+			<hr />
 
-		</tt></tt></div></span><tt><tt>
+		</div>
 
 
 		<div id="copyright">
@@ -128,11 +126,23 @@
 		</div>
 
 
-		<script async="" src="//www.google-analytics.com/analytics.js"></script><script></script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-41678546-2', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 
 
 
-	
+	</body>
+
+
+</html>
 
 
 
@@ -141,16 +151,12 @@
 
 
 
-
-
-
-<!-- 
+<!--
 
 
 </body>
- -->
+-->
 
 
 
 
-</tt></tt></body></html>
