link paper guerra

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 -->
 			<h4>Journal articles</h4>
 			<ul>
-				<li><p>A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina. In press.</p></li>
+				<li><p><a href="http://scientiamarina.revistas.csic.es/index.php/scientiamarina/article/viewArticle/1545">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina. In press.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S1352231014004713">M. Sestelo, J. Roca-Pardiñas and C. Ordóñez (2014). Predicting SO2 pollution incidents by means of additive models with optimum variable selection. Atmospheric Environment, 95,151-157.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569112002645">G. Bidegain, M. Sestelo, J. Roca-Pardiñas and J. A. Juanes (2013). Estimating a new suitable catch size for two clam species: Implications for shellfishery management. Ocean and Coastal Management, 71, 52-63.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0096300312008624">C. Ordóñez, M. Sestelo, J. Roca-Pardiñas and E. Covián (2012). Variable selection in regression models used to analyse Global Positioning System accuracy in forest environments. Applied Mathematics and Computation, 219, 2220-2230.</a></p></li>
