--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 
 		<div id="contact2">
-		June 04, 1981<br /><a href="mailto:sestelo@mat.uab.cat">sestelo@mat.uab.cat</a><br /><a href="http://sestelo.github.io">sestelo.github.io</a>
+		June 04, 1981<br /><a href="mailto:sestelo@uvigo.es">sestelo@uvigo.es</a><br /><a href="http://sestelo.github.io">sestelo.github.io</a>
 		</div>
 
 		<div id="contact1">
-		Marta Sestelo<br />Department of Mathematics<br />Autonomous University of Barcelona<br />
+		Marta Sestelo<br />Centre of Mathematics<br />University of Minho<br />
 		</div>
 
 
@@ -50,7 +50,7 @@
 		<div id="texto">
 
 			<h2><a name="about-me"></a> About me</h2>
-			<p>I am a Postdoctoral Researcher at the Department of Mathemathics of the Autonomous University of Barcelona. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
+			<p>I am a Postdoctoral Researcher at the Department of Mathemathics and Aplications of the University of Minho. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
 			<p><br></p>
 			<hr />
 
@@ -61,6 +61,7 @@
 <!--
 			<p>My complete cv can be download <a href="https://github.com/sestelo/sestelo.github.io/blob/master/sestelo_cv.pdf?raw=true">here</a>.</p>
 -->
+
 			<h4>Journal articles</h4>
 			<ul>
 				<li><p><a href="http://scientiamarina.revistas.csic.es/index.php/scientiamarina/article/viewArticle/1545">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina. In press.</a></p></li>
