new paper published

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 			<h4>Journal articles</h4>
 			<ul>
+				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569114003998">G. Bidegain, X. Guinda, M. Sestelo, J. Roca-Pardiñas, A. Puente and J.A. Juanes (2015). Assessing the suitability of management measures in the commercial goose barnacle Pollicipes pollicipes (Gmelin, 1789) fishery. Ocean and Coastal Management, 104, 150-158.</a></p></li>
 				<li><p><a href="http://www.icm.csic.es/scimar/index.php/secId/6/IdArt/4277/">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina, 78(3), 405-414.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S1352231014004713">M. Sestelo, J. Roca-Pardiñas and C. Ordóñez (2014). Predicting SO2 pollution incidents by means of additive models with optimum variable selection. Atmospheric Environment, 95,151-157.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569112002645">G. Bidegain, M. Sestelo, J. Roca-Pardiñas and J. A. Juanes (2013). Estimating a new suitable catch size for two clam species: Implications for shellfishery management. Ocean and Coastal Management, 71, 52-63.</a></p></li>
@@ -93,10 +94,12 @@
 
 
 
-			<h2><a name="teaching"></a>Teaching <font size="2">(in progress)</font></h2>
+			<h2><a name="teaching"></a>Teaching</h2>
 			<ul>
-				<li><p>Probability Calculus. B.Sc. in Applied Statistics. Autonomous University of Barcelona.</p></li>
-				<li><p>Simulation, Resampling and Applications. B.Sc. in Applied Statistics. Autonomous University of Barcelona.</p></li>
+				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2014-15.</p></li>
+				<li><p>Department of Mathematics, Autonomous University of Barcelona, Spain. 2013-14.</p></li>
+				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2010-13.</p></li>
+				<li><p>Department of Animal Biology, University of Santiago de Compostela, Spain. 2007-09.</p></li>
 			</ul>
 			<p><br></p>
 
@@ -123,7 +126,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a> 2014
+		© <a href="http://sestelo.github.io">Marta Sestelo</a> 2015
 		</div>
 
 
