--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div id="texto">
 
 			<h2><a name="about-me"></a> About me</h2>
-			<p>I am a Postdoctoral Researcher at the Department of Mathemathics and Aplications of the University of Minho. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
+			<p>I am a Postdoctoral Researcher at the Centre of Mathematics and Department of Mathemathics and Aplications of the University of Minho. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
 			<p><br></p>
 			<hr />
 
@@ -113,7 +113,7 @@
 
 				<p><br></p>
 
-				<li><strong>FWDselect</strong> package. Author and mantainer of this package (<a href="http://cran.r-project.org/web/packages/FWDselect/">http://cran.r-project.org/web/packages/FWDselect/</a>), an R package that introduces a simple method to select the best model or best subset of variables using different types of data (continuous, binary or poisson) and applying it in different contexts (parametric or nonparametric).</li>
+				<li><strong>FWDselect</strong> package. Author and mantainer of this package (<a href="http://cran.r-project.org/web/packages/FWDselect/">http://cran.r-project.org/web/packages/FWDselect/</a>), an R package that introduces a simple method to select the best model or best subset of variables using different types of data (gaussian, binary or poisson) and applying it in different contexts (parametric or nonparametric).</li>
 
 				<p><br></p>
 				
