new paper guerra

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 			<h4>Journal articles</h4>
 			<ul>
+				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0165783615001010">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2015). Spawning habitat selection by Octopus vulgaris: New insights for a more effective management of this resource. Fisheries Research, 167, 313-322.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569114003998">G. Bidegain, X. Guinda, M. Sestelo, J. Roca-Pardiñas, A. Puente and J.A. Juanes (2015). Assessing the suitability of management measures in the commercial goose barnacle Pollicipes pollicipes (Gmelin, 1789) fishery. Ocean and Coastal Management, 104, 150-158.</a></p></li>
 				<li><p><a href="http://www.icm.csic.es/scimar/index.php/secId/6/IdArt/4277/">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina, 78(3), 405-414.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S1352231014004713">M. Sestelo, J. Roca-Pardiñas and C. Ordóñez (2014). Predicting SO2 pollution incidents by means of additive models with optimum variable selection. Atmospheric Environment, 95,151-157.</a></p></li>
