--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
 		<p><a href="https://www.linkedin.com/profile/view?id=209697998&trk=nav_responsive_tab_profile_pic"><img id="linkedin" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/linkedin.png?raw=true" alt="linkedin"></a> 
 
-		<p><a href="https://twitter.com/MartaSestelo"><img id="twitter" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/twitter.png?raw=true" alt="twitter"></a> 
+		<p><a href="https://twitter.com/MartaSestelo"><img id="twitter" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/twitter.png?raw=true" alt="twitter"></a>
+
+		<p><a href="https://github.com/sestelo?tab=repositories"><img id="github" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/github.png?raw=true" alt="twitter"></a> 
+
+
 
 
 		<div id="navbar">
