added github logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<p><a href="https://twitter.com/MartaSestelo"><img id="twitter" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/twitter.png?raw=true" alt="twitter"></a>
 
-		<p><a href="https://github.com/sestelo?tab=repositories"><img id="github" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/github.png?raw=true" alt="twitter"></a> 
+		<p><a href="https://github.com/sestelo?tab=repositories"><img id="github" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/github.png?raw=true" alt="github"></a> 
 
 
 
@@ -114,11 +114,11 @@
 
 			<h2><a name="software"></a>Software</h2>
 			<ul>
-				<li><strong>NPRegfast</strong> package. Author and maintainer of this R package to perform nonparametric estimation for analyzing interactions factor-by-curve. NPRegfast allows the user to obtain nonparametric estimates using local linear kernel smoothers and compare them between factor’s levels. Also a feature of the package is its ability to draw inference about critical points, such as maxima or change points linked to the derivative curves. The inference (confidence intervals and tests) is based on bootstrap. This package allows not only to obtain smooth estimates also based on classical parametric models, as allometric model, one of the most used models in biology frameworks usually used to study the relationship between two biometrical variables. Additionally, we have implemented binning type acceleration techniques</li>
+				<li><strong>NPRegfast</strong> package. Author and maintainer of this R package to perform nonparametric estimation for analyzing interactions factor-by-curve. NPRegfast allows the user to obtain nonparametric estimates using local linear kernel smoothers and compare them between factor’s levels. Also a feature of the package is its ability to draw inference about critical points, such as maxima or change points linked to the derivative curves. The inference (confidence intervals and tests) is based on bootstrap. This package allows not only to obtain smooth estimates also based on classical parametric models, as allometric model, one of the most used models in biology frameworks usually used to study the relationship between two biometrical variables. Additionally, we have implemented binning type acceleration techniques.</li>
 
 				<p><br></p>
 
-				<li><strong>FWDselect</strong> package. Author and mantainer of this package (<a href="http://cran.r-project.org/web/packages/FWDselect/">http://cran.r-project.org/web/packages/FWDselect/</a>), an R package that introduces a simple method to select the best model or best subset of variables using different types of data (gaussian, binary or poisson) and applying it in different contexts (parametric or nonparametric).</li>
+				<li><strong>FWDselect</strong> package. Author and mantainer of this package (<a href="http://cran.r-project.org/web/packages/FWDselect/">http://cran.r-project.org/web/packages/FWDselect/</a>), an R package that introduces a simple method to select the best model or best subset of variables using different types of responses (gaussian, binary or poisson) and applying it in different contexts (parametric or nonparametric).</li>
 
 				<p><br></p>
 				
