change linkdin link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h1>sestelo.github.io</h1>
 		<p><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto">
 
-		<p><a href="https://www.linkedin.com/profile/view?id=209697998&trk=nav_responsive_tab_profile_pic"><img id="linkedin" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/linkedin.png?raw=true" alt="linkedin"></a> 
+		<p><a href="https://www.linkedin.com/pub/marta-sestelo/5a/289/12"><img id="linkedin" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/linkedin.png?raw=true" alt="linkedin"></a> 
 
 		<p><a href="https://twitter.com/MartaSestelo"><img id="twitter" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/twitter.png?raw=true" alt="twitter"></a>
 
