--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 -->
 
 			<h4>Journal articles</h4>
-			<ul>
+			<ul
+				<li><p><a href="">L. Meira-Machado, M. Sestelo and A. Gonçalves. Nonparametric estimation of the survival function for ordered multivariate failure time data: a comparative study. Biometrical Journal, in press.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0165783615001010">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2015). Spawning habitat selection by Octopus vulgaris: New insights for a more effective management of this resource. Fisheries Research, 167, 313-322.</a></p></li>
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569114003998">G. Bidegain, X. Guinda, M. Sestelo, J. Roca-Pardiñas, A. Puente and J.A. Juanes (2015). Assessing the suitability of management measures in the commercial goose barnacle Pollicipes pollicipes (Gmelin, 1789) fishery. Ocean and Coastal Management, 104, 150-158.</a></p></li>
 				<li><p><a href="http://www.icm.csic.es/scimar/index.php/secId/6/IdArt/4277/">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina, 78(3), 405-414.</a></p></li>
