--- a/03_teaching.html
+++ b/03_teaching.html
@@ -7,7 +7,6 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="academicons/academicons.css"/>
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>  
-
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
@@ -24,23 +23,18 @@
 	<body>
 		<h1><a href="http://sestelo.github.io">sestelo.github.io</a></h1>
 
-		
+		<div class="group-icons">
 			<a href="http://sestelo.github.io"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto"></a>
 			<a href="https://github.com/sestelo?tab=repositories"><i class="fa fa-github fa-2x"></i></a>
 			<a href="http://orcid.org/0000-0003-4284-6509"><i class="ai ai-orcid fa-2x"></i></a> 
 			<a href="https://www.researchgate.net/profile/Marta_Sestelo"><i class="ai ai-researchgate-square fa-2x"></i></a>
 			<a href="https://www.linkedin.com/pub/marta-sestelo/5a/289/12"><i class="fa fa-linkedin-square fa-2x"></i></a>
 			<a href="https://twitter.com/MartaSestelo"><i class="fa fa-twitter-square fa-2x"></i></a>	
-		
-
-	
-
-		<div id="name">
-			<strong>Marta Sestelo</strong>
 		</div>
 
 
-		<div id="navbarpp">
+
+		<div id="navbar">
 			<a href="01_aboutme.html"><strong>About me</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="02_research.html"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="03_teaching.html"><strong>Teaching</strong></a> &nbsp; &nbsp; &nbsp; 
@@ -60,14 +54,26 @@
 		</div>
 
 
+
+
 		<div id="texto">
 
-			
+
+
+			<h2><a name="teaching"></a>Teaching</h2>
+			<ul>
+				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2014-15.</p></li>
+				<li><p>Department of Mathematics, Autonomous University of Barcelona, Spain. 2013-14.</p></li>
+				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2010-13.</p></li>
+				<li><p>Department of Animal Biology, University of Santiago de Compostela, Spain. 2007-09.</p></li>
+			</ul>
 			<p><br></p>
+
 			<hr />
 
-		</div>
 
+
+		</div>
 
 
 		<div id="copyright">
