--- a/04_software.html
+++ b/04_software.html
@@ -7,7 +7,6 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="academicons/academicons.css"/>
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>  
-
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
@@ -19,28 +18,22 @@
 	</head>
 
 
-
-
 	<body>
 		<h1><a href="http://sestelo.github.io">sestelo.github.io</a></h1>
 
-		
+		<div class="group-icons">
 			<a href="http://sestelo.github.io"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto"></a>
 			<a href="https://github.com/sestelo?tab=repositories"><i class="fa fa-github fa-2x"></i></a>
 			<a href="http://orcid.org/0000-0003-4284-6509"><i class="ai ai-orcid fa-2x"></i></a> 
 			<a href="https://www.researchgate.net/profile/Marta_Sestelo"><i class="ai ai-researchgate-square fa-2x"></i></a>
 			<a href="https://www.linkedin.com/pub/marta-sestelo/5a/289/12"><i class="fa fa-linkedin-square fa-2x"></i></a>
 			<a href="https://twitter.com/MartaSestelo"><i class="fa fa-twitter-square fa-2x"></i></a>	
-		
-
-	
-
-		<div id="name">
-			<strong>Marta Sestelo</strong>
 		</div>
 
 
-		<div id="navbarpp">
+
+
+		<div id="navbar">
 			<a href="01_aboutme.html"><strong>About me</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="02_research.html"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="03_teaching.html"><strong>Teaching</strong></a> &nbsp; &nbsp; &nbsp; 
@@ -60,14 +53,27 @@
 		</div>
 
 
+
+
 		<div id="texto">
 
-			
+
+			<h2><a name="software"></a>Software</h2>
+			<ul>
+				<li><strong>NPRegfast</strong> package. Author and maintainer of this R package to perform nonparametric estimation for analyzing interactions factor-by-curve. NPRegfast allows the user to obtain nonparametric estimates using local linear kernel smoothers and compare them between factor’s levels. Also a feature of the package is its ability to draw inference about critical points, such as maxima or change points linked to the derivative curves. The inference (confidence intervals and tests) is based on bootstrap. This package allows not only to obtain smooth estimates also based on classical parametric models, as allometric model, one of the most used models in biology frameworks usually used to study the relationship between two biometrical variables. Additionally, we have implemented binning type acceleration techniques.</li>
+
+				<p><br></p>
+
+				<li><strong>FWDselect</strong> package. Author and mantainer of this package (<a href="http://cran.r-project.org/web/packages/FWDselect/">http://cran.r-project.org/web/packages/FWDselect/</a>), an R package that introduces a simple method to select the best model or best subset of variables using different types of responses (gaussian, binary or poisson) and applying it in different contexts (parametric or nonparametric).</li>
+
+				<p><br></p>
+				
+				<li><strong>seq2R</strong> package. Author of this R package (<a href="http://cran.r-project.org/web/packages/seq2R">http://cran.r-project.org/web/packages/seq2R</a>) to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. The package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in <tt>seq2R<tt>.</li>
+			</ul>
 			<p><br></p>
 			<hr />
 
 		</div>
-
 
 
 		<div id="copyright">
