--- a/01_aboutme.html
+++ b/01_aboutme.html
@@ -7,7 +7,6 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="academicons/academicons.css"/>
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>  
-
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
@@ -20,27 +19,21 @@
 
 
 
-
 	<body>
 		<h1><a href="http://sestelo.github.io">sestelo.github.io</a></h1>
 
 		
-			<a href="http://sestelo.github.io"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto"></a>
-			<a href="https://github.com/sestelo?tab=repositories"><i class="fa fa-github fa-2x"></i></a>
-			<a href="http://orcid.org/0000-0003-4284-6509"><i class="ai ai-orcid fa-2x"></i></a> 
-			<a href="https://www.researchgate.net/profile/Marta_Sestelo"><i class="ai ai-researchgate-square fa-2x"></i></a>
-			<a href="https://www.linkedin.com/pub/marta-sestelo/5a/289/12"><i class="fa fa-linkedin-square fa-2x"></i></a>
-			<a href="https://twitter.com/MartaSestelo"><i class="fa fa-twitter-square fa-2x"></i></a>	
+		<a href="http://sestelo.github.io"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto"></a>
+		<a href="https://github.com/sestelo?tab=repositories"><i class="fa fa-github fa-2x"></i></a>
+		<a href="http://orcid.org/0000-0003-4284-6509"><i class="ai ai-orcid fa-2x"></i></a> 
+		<a href="https://www.researchgate.net/profile/Marta_Sestelo"><i class="ai ai-researchgate-square fa-2x"></i></a>
+		<a href="https://www.linkedin.com/pub/marta-sestelo/5a/289/12"><i class="fa fa-linkedin-square fa-2x"></i></a>
+		<a href="https://twitter.com/MartaSestelo"><i class="fa fa-twitter-square fa-2x"></i></a>	
 		
 
-	
-
-		<div id="name">
-			<strong>Marta Sestelo</strong>
-		</div>
 
 
-		<div id="navbarpp">
+		<div id="navbar">
 			<a href="01_aboutme.html"><strong>About me</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="02_research.html"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="03_teaching.html"><strong>Teaching</strong></a> &nbsp; &nbsp; &nbsp; 
@@ -60,14 +53,16 @@
 		</div>
 
 
+
+
 		<div id="texto">
 
-			
+			<h2><a name="about-me"></a> About me</h2>
+			<p>I am a Postdoctoral Researcher at the Centre of Mathematics and Department of Mathemathics and Aplications of the University of Minho. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
 			<p><br></p>
 			<hr />
 
 		</div>
-
 
 
 		<div id="copyright">
