--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
-		<!-- <meta name="MobileOptimized" content="320">   -->
+	 	<meta name="MobileOptimized" content="320">  
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Style-Type" content="text/css" href="style.css" />
