--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
-	 	<meta name="MobileOptimized" content="320">  
+	 	<meta name="MobileOptimized" content="HandheldFriendly">  
+
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Style-Type" content="text/css" href="style.css" />
@@ -21,9 +22,8 @@
 
 
 	<body>
-		<h1><a href="http://sestelo.github.io">sestelo.github.io</a></h1>
+		<h3><a href="http://sestelo.github.io">sestelo.github.io</a></h3>
 
-		
 			<a href="http://sestelo.github.io"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto"></a>
 			<a href="https://github.com/sestelo?tab=repositories"><i class="fa fa-github fa-2x"></i></a>
 			<a href="http://orcid.org/0000-0003-4284-6509"><i class="ai ai-orcid fa-2x"></i></a> 
@@ -35,7 +35,7 @@
 	
 
 		<div id="name">
-			<strong>Marta Sestelo</strong>
+			<h1><p><strong>Marta Sestelo</strong></p><h1/>
 		</div>
 
 
