--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
-	 	<meta name="MobileOptimized" content="HandheldFriendly">  
+	 <!-- 	<meta name="MobileOptimized" content="HandheldFriendly">  -->
 
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Style-Type" content="text/css" href="style.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" />  -->
 	</head>
 
 
