--- a/01_aboutme.html
+++ b/01_aboutme.html
@@ -2,20 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 
+
 	<head>
 		<title>Marta Sestelo</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css" media="screen">
 		<link rel="stylesheet" href="academicons/academicons.css"/>
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>  
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
-		<!-- <meta name="MobileOptimized" content="320">   -->
+	 	<meta name="MobileOptimized" content="HandheldFriendly">  
+	 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Style-Type" content="text/css" href="style.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
 	</head>
+
 
 
 	<body>
