--- a/01_aboutme.html
+++ b/01_aboutme.html
@@ -61,7 +61,7 @@
 		<div id="texto">
 
 			<h2><a name="about-me"></a> About me</h2>
-			<p>I am a Postdoctoral Researcher at the Centre of Mathematics and Department of Mathemathics and Aplications of the University of Minho. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or Environment.</p>
+			<p>I am a Postdoctoral Researcher at the Centre of Mathematics and Department of Mathemathics and Aplications of the University of Minho. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to different areas of knowledge.</p>
 			<p><br></p>
 			<hr />
 
