--- a/02_research.html
+++ b/02_research.html
@@ -62,14 +62,23 @@
 -->
 
 			<h4>Journal articles</h4>
-			<ul
-				<li><p><a href="">L. Meira-Machado, M. Sestelo and A. Gonçalves. Nonparametric estimation of the survival function for ordered multivariate failure time data: a comparative study. Biometrical Journal, in press.</a></p></li>
+			<ul>
+				<li><p><a href="">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas. FWDselect: an R package for variable selection in regression models. The R Journal, to appear.</a></p></li>
+
+				<li><p><a href="http://onlinelibrary.wiley.com/doi/10.1002/bimj.201500038/abstract">L. Meira-Machado, M. Sestelo and A. Gonçalves. Nonparametric estimation of the survival function for ordered multivariate failure time data: a comparative study. Biometrical Journal, in press.</a></p></li>
+
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0165783615001010">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2015). Spawning habitat selection by Octopus vulgaris: New insights for a more effective management of this resource. Fisheries Research, 167, 313-322.</a></p></li>
+
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569114003998">G. Bidegain, X. Guinda, M. Sestelo, J. Roca-Pardiñas, A. Puente and J.A. Juanes (2015). Assessing the suitability of management measures in the commercial goose barnacle Pollicipes pollicipes (Gmelin, 1789) fishery. Ocean and Coastal Management, 104, 150-158.</a></p></li>
+
 				<li><p><a href="http://www.icm.csic.es/scimar/index.php/secId/6/IdArt/4277/">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina, 78(3), 405-414.</a></p></li>
+
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S1352231014004713">M. Sestelo, J. Roca-Pardiñas and C. Ordóñez (2014). Predicting SO2 pollution incidents by means of additive models with optimum variable selection. Atmospheric Environment, 95,151-157.</a></p></li>
+
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569112002645">G. Bidegain, M. Sestelo, J. Roca-Pardiñas and J. A. Juanes (2013). Estimating a new suitable catch size for two clam species: Implications for shellfishery management. Ocean and Coastal Management, 71, 52-63.</a></p></li>
+
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0096300312008624">C. Ordóñez, M. Sestelo, J. Roca-Pardiñas and E. Covián (2012). Variable selection in regression models used to analyse Global Positioning System accuracy in forest environments. Applied Mathematics and Computation, 219, 2220-2230.</a></p></li>
+
 				<li><p><a href="http://www.bioone.org/doi/abs/10.2983/035.030.0336">M. Sestelo and J. Roca-Pardiñas (2011). A new approach to estimation of the length-weight relationship of Pollicipes pollicipes (Gmelin, 1789) on the Atlantic coast of Galicia (Northwest Spain): Some aspects of its biology and management. Journal of Shellfish Research, 30(3), 939-948.</a></p></li>
 			</ul>
 
