--- a/02_research.html
+++ b/02_research.html
@@ -65,7 +65,7 @@
 			<ul>
 				<li><p><a href="https://journal.r-project.org/archive/accepted/sestelo-villanueva-meiramachado-etal.pdf">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2016). FWDselect: an R package for variable selection in regression models. The R Journal, Online.</a></p></li>
 
-				<li><p><a href="http://onlinelibrary.wiley.com/doi/10.1002/bimj.201500038/abstract">L. Meira-Machado, M. Sestelo and A. Gonçalves (2016). Nonparametric estimation of the survival function for ordered multivariate failure time data: a comparative study. Biometrical Journal, Online.</a></p></li>
+				<li><p><a href="http://onlinelibrary.wiley.com/doi/10.1002/bimj.201500038/abstract">L. Meira-Machado, M. Sestelo and A. Gonçalves (2016). Nonparametric estimation of the survival function for ordered multivariate failure time data: a comparative study. Biometrical Journal, 58 (3), 623-634.</a></p></li>
 
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0165783615001010">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2015). Spawning habitat selection by Octopus vulgaris: New insights for a more effective management of this resource. Fisheries Research, 167, 313-322.</a></p></li>
 
