new paper guerra and new R package

--- a/04_software.html
+++ b/04_software.html
@@ -60,6 +60,10 @@
 
 			<h2><a name="software"></a>Software</h2>
 			<ul>
+				<li><strong>condSURV</strong> package. Author of this R package (<a href="http://cran.r-project.org/web/packages/condSURV/">http://cran.r-project.org/web/packages/condSURV/</a>) to implement some newly developed methods for the estimation of the conditional survival function. The package implements three nonparametric and semiparametric estimators for these quantities. It also implements feasible estimation methods for these quantities conditionally on current or past covariate measures. Other related estimators are also implemented in the package. One of these estimators is the Kaplan-Meier estimator typically assumed to estimate the survival function. A modification of the Kaplan-Meier estimator, based on a preliminary estimation (presmoothing) of the censoring probability for the survival time, given the available information is also implemented.</li>
+
+				<p><br></p>
+
 				<li><strong>npregfast</strong> package. Author and maintainer of this R package (<a href="http://cran.r-project.org/web/packages/npregfast/">http://cran.r-project.org/web/packages/npregfast/</a>) to perform nonparametric estimation for analyzing interactions factor-by-curve. npregfast allows the user to obtain nonparametric estimates using local linear kernel smoothers and compare them between factor’s levels. Also a feature of the package is its ability to draw inference about critical points, such as maxima or change points linked to the derivative curves. The inference (confidence intervals and tests) is based on bootstrap. This package allows not only to obtain smooth estimates also based on classical parametric models, as allometric model, one of the most used models in biology frameworks usually used to study the relationship between two biometrical variables. Additionally, we have implemented binning type acceleration techniques.</li>
 
 				<p><br></p>
@@ -77,7 +81,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2015
+		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2016
 		</div>
 
 
