--- a/04_software.html
+++ b/04_software.html
@@ -37,7 +37,8 @@
 			<a href="01_aboutme.html"><strong>About me</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="02_research.html"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="03_teaching.html"><strong>Teaching</strong></a> &nbsp; &nbsp; &nbsp; 
-			<a href="04_software.html"><strong>Software</strong></a>
+			<a href="04_software.html"><strong>Software</strong></a> &nbsp; &nbsp; &nbsp; 
+			<a href="05_news.html"><strong>News</strong></a>
 		</div>
 
 
