--- a/05_news.html
+++ b/05_news.html
@@ -2,23 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 
-
 	<head>
 		<title>Marta Sestelo</title>
-		<link rel="stylesheet" type="text/css" href="style.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="academicons/academicons.css"/>
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>  
 		<meta name="description" content="Marta Sestelo's personal page.">
 		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
 		<meta name="author" content="Marta Sestelo"> 
-	 	<meta name="MobileOptimized" content="HandheldFriendly">  
-	 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<!-- <meta name="MobileOptimized" content="320">   -->
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Style-Type" content="text/css" href="style.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-
 
 
 	<body>
@@ -40,7 +37,7 @@
 			<a href="01_aboutme.html"><strong>About me</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="02_research.html"><strong>Research</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="03_teaching.html"><strong>Teaching</strong></a> &nbsp; &nbsp; &nbsp; 
-			<a href="04_software.html"><strong>Software</strong></a> &nbsp; &nbsp; &nbsp;
+			<a href="04_software.html"><strong>Software</strong></a> &nbsp; &nbsp; &nbsp; 
 			<a href="05_news.html"><strong>News</strong></a>
 		</div>
 
@@ -61,8 +58,15 @@
 
 		<div id="texto">
 
-			<h2><a name="about-me"></a> About me</h2>
-			<p>I am a Postdoctoral Researcher at the Centre of Mathematics and Department of Mathemathics and Aplications of the University of Minho. I am focused on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to different areas of knowledge.</p>
+
+			<h2><a name="news"></a>News</h2>
+			<ul>
+				<li><strong>Research Award (Science and Technology), Pontevedra Provincial Council (Spain)</strong>. Related new at <a href="http://goo.gl/Uj6BCN">La Voz de Galicia</a>. </li>
+
+				<p><br></p>
+
+				
+			</ul>
 			<p><br></p>
 			<hr />
 
