--- a/02_research.html
+++ b/02_research.html
@@ -64,7 +64,7 @@
 
 			<h4>Journal articles</h4>
 			<ul>
-				<li><p><a href="https://journal.r-project.org/archive/accepted/sestelo-villanueva-meiramachado-etal.pdf">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2016). FWDselect: an R package for variable selection in regression models. The R Journal, Online.</a></p></li>
+				<li><p><a href="https://journal.r-project.org/archive/2016-1/sestelo-villanueva-meiramachado-etal.pdf">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2016). FWDselect: an R package for variable selection in regression models. The R Journal, 8 (1), 48-64.</a></p></li>
 
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0165783616301400">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, M. Gilcoto and A. F. González (2016). Spawning habitat selection by the common cuttlefish Sepia officinalis in the Cíes Islands (Northwest Spain). Fisheries Research, 183, 44-54.</a></p></li>
 
@@ -72,7 +72,7 @@
 
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0165783615001010">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2015). Spawning habitat selection by Octopus vulgaris: New insights for a more effective management of this resource. Fisheries Research, 167, 313-322.</a></p></li>
 
-				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569114003998">G. Bidegain, X. Guinda, M. Sestelo, J. Roca-Pardiñas, A. Puente and J.A. Juanes (2015). Assessing the suitability of management measures in the commercial goose barnacle Pollicipes pollicipes (Gmelin, 1789) fishery. Ocean and Coastal Management, 104, 150-158.</a></p></li>
+				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0964569114003998">G. Bidegain, X. Guinda, M. Sestelo, J. Roca-Pardiñas, A. Puente and J.A. Juanes (2015). Assessing the suitability of the minimum capture size and protection regimes in the gooseneck barnacle shellfishery. Ocean and Coastal Management, 104, 150-158.</a></p></li>
 
 				<li><p><a href="http://www.icm.csic.es/scimar/index.php/secId/6/IdArt/4277/">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina, 78(3), 405-414.</a></p></li>
 
