--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 	<body>
 		<h3><a href="http://sestelo.github.io">sestelo.github.io</a></h3>
 
-			<a href="http://sestelo.github.io"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto"></a>
+			<!--
+			<a href="http://sestelo.github.io"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/sestelo_photo2.png?raw=true" alt="foto"></a>
+			-->
+
+			<a href="https://github.com/sestelo/sestelo.github.io/blob/master/images/sestelo_photo.jpg"><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/sestelo_photo2.png?raw=true" alt="foto"></a>
 			<a href="https://github.com/sestelo?tab=repositories"><i class="fa fa-github fa-2x"></i></a>
 			<a href="http://orcid.org/0000-0003-4284-6509"><i class="ai ai-orcid fa-2x"></i></a> 
 			<a href="https://www.researchgate.net/profile/Marta_Sestelo"><i class="ai ai-researchgate-square fa-2x"></i></a>
